# pdf-summary-fastAPI

./: .gitignore  README.md  main.py  pyproject.toml
app/: entrypoint.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: diff.py  rag.py  summarize.py  summary_and_index.py  tree.py
app/cache/: utils.py
app/core/: config.py  logging.py
app/llm/: chains.py  models.py  prompts.py
app/rag/: __init__.py  agent.py  config.py  indexer.py  loaders.py  qa_agent.py  splitter.py  vector_store.py
app/schemas/: diff.py  rag.py  summarize.py  summary_and_index.py  tree.py
app/services/: cache_utils.py  chunking.py  diff_check.py  file_loader.py  summarizer.py  summary_and_index.py  tree_generator.py  tree_service.py
app/services/summarizer/: file.py  folder.py  utils.py
libs/: agent.py  summary.py  types.py
