[project]
name = "pdf-summary-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.1",
    "pymupdf>=1.26.7",
    "python-pptx>=1.0.2",
    "pyinstaller>=6.12.0",
    "openpyxl>=3.1.5",
    "langchain-chroma>=1.1.0",
]
